--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./
+        working-directory: DevHabit
 
     steps:
       - uses: actions/checkout@v4
