Supporting Searching and Filtering

--- a/DevHabit/.editorconfig
+++ b/DevHabit/.editorconfig
@@ -321,6 +321,9 @@ dotnet_diagnostic.CA1848.severity = none
 # CA1860: Avoid using 'Enumerable.Any()' extension method
 dotnet_diagnostic.CA1860.severity = none
 
+# CA1862: Prefer the string comparison method oveload of 'string.Contains(string)'
+dotnet_diagnostic.CA1862.severity = none
+
 # CA2007: Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2007.severity = none
 
